samples/errors/Cycle3.tmpl
scala: test.Cycle3
purs: Test.Cycle3

import Cycle1

type X: Int
